# monmarche-backend

./: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/routes/: auth.py  health.py  mappings.py  monmarche_auth.py  orders.py  recipes.py
app/core/: config.py  logging.py  security.py
app/db/: models.py  repositories.py  session.py
app/schemas/: auth.py  ingredient.py  mapping.py  order.py  recipe.py
app/services/: auth_service.py  gemini_recipe_parser_service.py  ingredient_service.py  mapping_service.py  monmarche_bot.py  normalization_service.py  notion_service.py  order_service.py  recipe_cache_service.py  recipe_parser_service.py
scripts/: save_monmarche_session.py
tests/: conftest.py  test_gemini_recipe_parser.py  test_health.py  test_ingredient_consolidation.py  test_mapping_service.py  test_normalization.py  test_recipe_cache.py  test_recipe_parser.py
