[project]
name = "monmarche-backend"
version = "0.1.0"
description = "Backend FastAPI pour Mon Marché Meal Planner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "python-dotenv>=1.0.1",
    "notion-client>=2.2.1",
    "playwright>=1.48.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
